--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "expo-router": "~6.0.21",
     "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-updates": "~29.0.16",
     "expo-web-browser": "~15.0.10",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
