--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
     "socket.io": "^4.8.3",
-    "@supabase/supabase-js": "^2.48.1"
+    "@supabase/supabase-js": "^2.48.1",
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
